--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your App Name</title>
+    <title>wander.ai</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Meta tags for SEO -->
     <meta name="description" content="A simple search landing page">
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>Your App Name</h1>
+        <h1>Explore Winston-Salem through chat</h1>
     </div>
     <div class="search-container">
         <form id="search-form">
             <input type="text" id="search-input" placeholder="Search..." class="search-bar" autofocus>
-            <button type="submit" class="search-button">Explore</button>
+            <button type="submit" class="search-button">Wander</button>
         </form>
     </div>
 
