--- a/results.html
+++ b/results.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Chat interface page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="chat-page">
     <!-- Chat Container -->
     <div class="chat-page-container">
         <div class="chat-header">
-            <h1>Your App Name Chat</h1>
+            <h1>Placeholder text</h1>
         </div>
         <div class="chat-container" id="chat-container">
             <!-- Chat messages will be appended here -->
